--- a/.gitignore
+++ b/.gitignore
@@ -155,11 +155,12 @@ dmypy.json
 cython_debug/
 
 # JSON
-/credentials-sheets.json
+credentials-sheets.json
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+#.idea/credentials-sheets.json
+token.json
